--- a/BlogOn/Views/Post/Details.cshtml
+++ b/BlogOn/Views/Post/Details.cshtml
@@ -54,7 +54,7 @@
         else
         {
             <div style="border-radius: 0" class="alert alert-info" role="alert">
-                To submit a comment, you have to sing in the application.
+                To submit a comment, you have to sign in the application.
             </div>
         }
 
