--- a/BlogOn/Areas/Management/Views/Comment/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Comment/Index.cshtml
@@ -55,6 +55,15 @@
                                         </td>
                                         <td>@Html.DisplayFor(model => item.CreatedAt)</td>
                                         <td class="text-right">
+                                            <a class="btn btn-icon btn-default" asp-action="Details"
+                                                asp-controller="Post" 
+                                                asp-area="" 
+                                                asp-route-id="@item.Post.ID" 
+                                                asp-route-month="@item.CreatedAt.Month" 
+                                                asp-route-year="@item.Post.CreatedAt.Year" 
+                                                asp-route-slug="@item.Post.Slug">
+                                                <span class="nc-icon nc-send"></span>
+                                            </a>
                                             <partial name="_ActionButtonsPartial" model="item.ID">
                                         </td>
                                     </tr>
