--- a/BlogOn/Views/Account/Login.cshtml
+++ b/BlogOn/Views/Account/Login.cshtml
@@ -3,40 +3,51 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="blog-post">
-    <h2 class="blog-post-title">@ViewData["Title"]</h2>
-    <p>
-        <form asp-action="Login" asp-controller="Account" asp-antiforgery="true">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <input placeholder="E-Mail" style="border-radius: 0" class="form-control" asp-for="Email" autocomplete="off">
-                        <span class="text-danger" asp-validation-for="Email"></span>
+<div class="row">
+    <div class="col-md-6 p-3">
+        <h4>@ViewData["Title"]</h4>
+        <p>
+            <form asp-action="Login" asp-controller="Account" asp-antiforgery="true">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input placeholder="E-Mail" style="border-radius: 0" class="form-control" asp-for="Email" autocomplete="off">
+                            <span class="text-danger" asp-validation-for="Email"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <input placeholder="Password" style="border-radius: 0" class="form-control" asp-for="Password">
-                        <span class="text-danger" asp-validation-for="Password"></span>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input placeholder="Password" style="border-radius: 0" class="form-control" asp-for="Password">
+                            <span class="text-danger" asp-validation-for="Password"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <button style="border-radius: 0" class="btn btn-secondary btn-block">Sign in</button>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button style="border-radius: 0" class="btn btn-secondary btn-block">Sign in</button>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-right">
-                    <small>
-                        <a asp-action="Register" asp-controller="Account">Do not have an account? Sign Up.</a>
-                    </small>
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <small>
+                            <a asp-action="Register" asp-controller="Account">Do not have an account? Sign Up.</a>
+                        </small>
+                    </div>
                 </div>
-            </div>
-        </form>
-    </p>
+            </form>
+        </p>
+    </div>
+    <div class="col-md-6 p-3">
+        <h4>Don't have an account?</h4>
+        <p>
+            Do not you have an account? Sign up instantly.
+        <p>
+            <a asp-action="Register" asp-controller="Account" style="border-radius: 0" class="btn btn-secondary btn-block">Register</a>
+        </p>
+        </p>
+    </div>
 </div>
 
 @section Scripts {
