--- a/BlogOn/Views/Shared/_Layout.cshtml
+++ b/BlogOn/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
     <main role="main" class="container">
         <div class="row">
-            <div class="col-md-8 blog-main">
+            <div class="col-md-8 blog-main p-3">
                 @RenderBody()
 
             </div><!-- /.blog-main -->
